tester/testsuite/good/intarith2.yal
fn main() -> int {
let x: int  = 0;

    {
        let x: int = 10;
        while (x > 0) {
            printInt(x);
            x--;
        }
    }

    printInt(x);
    
    return 0;
}
    
