tester/testsuite/bad/array07.yal
fn main() -> int {
let x: int[] = new int[10];
let y: int = x.hi;
  return 0;
}
